src/test/deca/codegen/invalid/created/soutenance.ass
	TSTO #18
	BOV stack_overflow_error
	ADDSP #31
; Code de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.object.equals, R0
	STORE R0, 2(GB)
; code de la table des méthodes de alpha
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.object.equals, R0
	STORE R0, 4(GB)
; code de la table des méthodes de beta
	LEA 3(GB), R0
	STORE R0, 5(GB)
	LOAD code.object.equals, R0
	STORE R0, 6(GB)
; code de la table des méthodes de sigma
	LEA 1(GB), R0
	STORE R0, 7(GB)
	LOAD code.object.equals, R0
	STORE R0, 8(GB)
; start main program
; Main program
; Beginning of main instructions:
	LOAD #null, R0
	STORE R0, 9(GB)
	LOAD #null, R0
	STORE R0, 10(GB)
	LOAD #0, R2
	STORE R2, 13(GB)
	LOAD #null, R0
	STORE R0, 14(GB)
	NEW #3, R2
	BOV tas_plein
	LEA 7(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.sigma
	POP R2
	STORE R2, 15(GB)
	HALT
; end main program
overflow_error:
	WSTR "Error: Overflow during arithmetic operation"
	WNL
	ERROR
stack_overflow_error:
	WSTR "Error: Stack Overflow "
	WNL
	ERROR
io_error:
	WSTR "Error: Input/Output error"
	WNL
	ERROR
Dereferencement.null:
	WSTR "Erreur : dereferencement de null"
	WNL
	ERROR
pile_pleine:
	WSTR "Erreur : pile pleine"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : allocation impossible, tas plein"
	WNL
	ERROR
cast_incorrect:
	WSTR "la conversion (cast) est incorrecte"
	WNL
	ERROR
; code de l'initialisation des champs
init.alpha:
	LOAD #0, R0
	LOAD -2(LB), R1
	STORE R0, 1(R1)
	RTS
init.beta:
	LOAD -2(LB), R1
	PUSH R1
	BSR init.alpha
	SUBSP #1
	RTS
init.sigma:
	LOAD #0x1.933334p1, R2
	LOAD R2, R0
	LOAD -2(LB), R1
	STORE R0, 1(R1)
	LOAD #null, R0
	LOAD -2(LB), R1
	STORE R0, 2(R1)
	RTS
; code des méthodes
code.object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	BEQ if_equal_pour_object.equals
	LOAD #0, R0
	BRA fin_methodes
if_equal_pour_object.equals:
	LOAD #1, R0
	BRA fin_methodes
fin_methodes:
	RTS
